tests/negative/Test4.sp
(* Testing function without type on arguments *)

main:Int(a){

}